style.css
*{
  padding:0;
  margin:0;
  

}


body{
    padding:0;
     margin:0;
     font-family:"Work Sans",sans-serif;
     display: block;
     box-sizing: border-box;
     overflow-x: hidden;
     
     color:rgb(0, 0, 0);
   }

   header{
     background:rgb(32, 178, 170);
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
        -moz-user-select: none; /* Firefox */
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; 

             box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.6);
             z-index: 100;
             position:fixed;
             width:100%;
             min-height: 10vh;
   }
   #logo{
     position: absolute;
     left:10%;
     
   
    width:300px;
    
    
     
   }
   nav{
     float:right;
     height:100%;
     display:flex;
     align-items: center;
   }
   
   header::after{
     content:'';
     display:table;
     clear:both;
    }
   
   #navigation{
     width:80%;
     height: 80px;
     margin:0 auto;
     
     
   }
   nav ul{
     margin:0;
     padding:0;
     list-style:none;
     
   }
   nav li{
     display:inline-block;
     margin-left:50px;
     margin-top:15px;
     padding:10px 0;
     margin-bottom:15px;
     position:relative;
   }
   nav a {
     color:white;
     text-decoration:none;
     text-transform:uppercase;
     font-size:18px;
     font-weight:700 ;
     position: relative;
   }
   nav a:hover{
     color:rgba(4, 47, 47, 1);
   }
   nav a:focus{
       outline:none;
   }
   nav a::before{
     content:"";
     display:block;
     position:absolute;
     height:5px;
     border-radius:50px;
     
     background-color:rgba(4, 47, 47, 1);
     top:-10px;
     width:0%;
     transition:all  200ms ease-in-out 150ms;
   }
   
   .burger{
     position:absolute;
    right:5%;
    top:30px;
    display: none;
    cursor: pointer;
    overflow-x: hidden;
    
   }
   .burger div{
     height:3px;
     width:25px;
     background-color: white;
     margin-top: 5px;
     transition: all 200ms ease-in;
   }
   
   nav a:hover::before{
     width:100%;
   }
   #main{
     
       width:100%;
       min-height: 100vh;
       display:block;
       background-image: url("https://images.pexels.com/photos/1680140/pexels-photo-1680140.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: center; 
       background-size:cover;
       overflow-x: hidden;
   }
   
   #about,#location
   {
      min-height: 80vh;
       width:100%;
    }

   #landing{
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
       width:100%;
   }
   #landing img{
       margin: 0 auto;
       color:rgb(12, 70, 70);
       background-color:rgba(32, 178, 170,0.5);
       padding: 10px;
       border-radius: 500px;
       max-width:400px;

       
   }
  
   #about{
      
       background-color:rgba(32, 178, 170,0.5) ;
       color:rgb(255, 255, 255);
      
       }

       #location .paragraph{
         background-color: white;
         
         min-height: 500px;
        
        
       }

   section{
       display: flex;
       overflow: hidden;
       justify-content:center;
       align-items:center;
       padding-top: 50px;
       width: 80%;
       margin:auto;
       
   }
   article{
    width:100%;
    display:grid;
    grid-template-columns:repeat(auto-fit, minmax(400px, 1fr));
    grid-gap:100px;
    justify-content:center;
    align-items:center;
    overflow:hidden;
    margin: 100px auto;
    
    
   }
   .reverse{
     margin-left:0;
   }
   article img{
       max-height: 500px;
       max-width: 90%;
       margin:auto;
       -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
       -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
       box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);       
       
       
       
       
    }

  #second{
    height: 500px;
       max-width: 90%;
       margin:auto;
       
      

  }
  

   .paragraph{
       min-width: 300px;
    max-width:500px;
    min-height: 400px;
    
    border-radius: 5px;
    margin:auto;
   
    
    
   }
   .paragraph h2{
       font-size: 36px;
       font-weight: 700;
       margin-bottom: 100px;
   }
    .paragraph p{
       
        text-align: left;
        font-size: 20px;
        line-height: 30px;


   }
   #location .paragraph h2,
   #location .paragraph p{
    padding: 0 50px;
   }
   #contact-button{
       display:block;
       
       text-align: left;
       
       padding:50px 50px 20px 50px;
       
   }
   #contact-button button{
       color:white;
       background-color:rgba(45, 152, 223, 1);
       padding: 10px;
       border-radius: 50px;
       font-size:30px;
       font-weight: 700;
       transition: all 200ms ease-in-out;
       border:none;

   }
   #contact-button a{
    color:white;
    text-decoration: none;
   }
 
   #contact-button button:hover{
    box-shadow: 5px 5px 20px -5px rgba(0,0,0,0.6);
    transform: scale(1.05);
   }
   #contact-button button:active{
    box-shadow: none;
    transform: scale(1.0);
   }
   #footer{
     width:100%;
     color:white;
     background-color: rgba(4, 47, 47, 0.5);
     text-align: center;
     margin:0;
     padding:0;
     position: static;
     bottom: 0;
     z-index: 1000;

   }
   #footer p{
     margin:0;
     padding:10px;

   }
   @media only screen and (max-width: 966px){
    
    #second{
      order:2;
    }
   }
   @media only screen and (max-width: 880px) {
     .burger{
       display:block;
     }
     nav{
       position: absolute;
       top:10vh;
       padding-top:10vh;
       right:0;
       background-color: rgba(32, 178, 170,1);
       flex-direction: column;
       flex-wrap: nowrap;
       width:50%;
       height:90.5vh;
       transform: translateX(100%);
       overflow-x: hidden;
     }
     nav li{
       display: block;
       margin-bottom: 20vh;
       opacity:0;
       transition: all 500ms ease-in;
     }
     .paragraph{
      padding: 0 50px;
     
     }

    


   }



   .transition{
     transition: all 300ms ease-in;
   }

   .activated{
     transform: translateX(0%);
     opacity:1
   }

   .clicked #line1{
    transform: translateY(8px) rotate(45deg);
   }

   
   .clicked #line2{
     opacity:0;

  }
  
  .clicked #line3{
    transform: translateY(-8px)  rotate(-45deg)  ;
    
  }

